--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <!-- imports -->
         <script type="text/javascript" src="libs/sburb/Sburb.min.js"></script>
+        <script type="text/javascript" src="libs/jquery/jquery.min.js"></script>
         <script type="text/javascript" src="libs/bootstrap/js/bootstrap.min.js"></script>
 
         <link type="text/css" href="libs/bootstrap/css/bootstrap.min.css"></script>
